# hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  bookings.json  pyproject.toml
.claude/: miles-design-system.md
.claude/agents/: developer.md  project-planner.md  qa-engineer.md  reviewer.md  tech-writer.md
.claude/commands/: bugfix.md  demo.md  documentation.md  feature.md  quality.md
.claude/guides/: miles-developer-guide.md  phase-1-setup.md  project-guide.md  project-summary.md  vb-developer-guide.md
.claude/sabre-skills/: mcp-skills-skill.md  mcp-tool-skill.md  sabre-chatbot-tutorial.txt  sabre-mcp-tools.txt
agents/: ACT2.md  api_tools.json  check_act2.sh  client_actions.json  hotel_front_desk_script.md  hotel_prompt.txt  hotel_tools.json  miles_prompt.txt  patch_act2_tools.sh  setup_act2.sh  traveler_prompt.txt  traveler_tools.json
api/: config.py  main.py  state.py  vb_call.py
api/routes/: agent.py  context.py  events.py  paypal.py  recovery.py  tools.py  voice.py
contracts/: agent_query.md  sse_events.md  tools.json
frontend/: Miles_Dashboard_Prototype.html  Miles_Trip_Detail.html  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/mock/: home-itinerary-checkout.html
frontend/src/: App.tsx  TripApp.tsx  main.tsx  profile.ts  prototype.css  session.ts  tripView.ts
frontend/src/components/: CheckoutPage.tsx  Dashboard.tsx  DestinationGuideCard.tsx  (+9 more)
graph/: build.py  nodes.py  state.py
sabre/: client.py
sabre/fixtures/: booking_confirmed.json  cars_cun.json  flights_mco_cun.json  hotels_cun.json
(+3 files in other folders)
