[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.8",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.50.2",
]
